deployment/app-deployment-and-nodeport-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-2
  labels:
    app: nodeapp-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeapp-2
  template:
    metadata:
      labels:
        app: nodeapp-2
    spec:
      containers:
        - name: nodeapp-2
          image: asia-southeast2-docker.pkg.dev/internal-testing-bayu-yunarko/testing/nodeapp:0.1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-2-nodeport-service
  labels:
    app: nodeapp-2
  annotations:
spec:
  type: NodePort
  selector:
    app: nodeapp-2
  ports:
    - port: 80
      targetPort: 8000
