deployment/ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basics
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    # gce: external load balancer
    # gce-internal: internal load balancer
    kubernetes.io/ingress.class: "gce"  
spec:
  defaultBackend:
    service:
      name: nodeapp-2-nodeport-service
      port:
        number: 80
